--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "ember-template",
+  "name": "EmberSailsTest",
   "title": "An HTML/JS/CSS app",
   "version": "0.0.1",
   "private": true,
   "author": {
-    "name": "John Doe",
-    "company": "ACME, Inc."
+    "name": "Ofri Dagan",
+    "company": "none"
   },
   "devDependencies": {
     "lineman": ">= 0.24.4",
-    "lineman-ember": ">= 0.0.1"
+    "lineman-ember": ">= 0.0.1",
+    "lineman-less": "0.0.1",
+    "lineman-bower": "0.0.3",
+    "lineman-coffeelint": "~0.1.1"
   },
   "scripts": {
     "start": "lineman run",
