--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "lineman-ember": ">= 0.0.1",
     "lineman-less": "0.0.1",
     "lineman-bower": "0.0.3",
-    "lineman-coffeelint": "~0.1.1"
+    "lineman-coffeelint": "~0.1.1",
+    "grunt": "~0.4.4",
+    "grunt-es6-module-transpiler": "~0.6.0"
   },
   "scripts": {
     "start": "lineman run",
     "test": "lineman spec-ci"
+  },
+  "dependencies": {
+    "underscore": "~1.6.0"
   }
 }
